# 3000

./: .gitignore  README.md  pyproject.toml
tests/: test_camera.py  test_cli.py  test_motion.py  test_sqlite_store.py
three_thousand/: __init__.py  cli.py
three_thousand/core/: __init__.py  camera.py  config.py  events.py  motion.py
three_thousand/storage/: __init__.py  sqlite_store.py
three_thousand/ui/: __init__.py  console.py
