[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "3000"
version = "0.1.0"
description = "Local-first computer vision sentinel."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "opencv-python>=4.10.0",
  "rich>=13.7.0",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
3000 = "three_thousand.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
packages = ["three_thousand", "three_thousand.core", "three_thousand.storage", "three_thousand.ui"]
